--- a/WebContent/system/css/loading.css
+++ b/WebContent/system/css/loading.css
@@ -9,7 +9,7 @@
   height: 100px;
   z-index: 9999;
 }
-.loader span {
+/*.loader span {
   display: block;
   background: #ccc;
   width: 7px;
@@ -86,7 +86,7 @@
     height: 10%;
     margin-top: 25%;
   }
-}
+}*/
 .loader_bg{
 	width:100%;
 	height: 100%;
@@ -94,4 +94,11 @@
 	background: #f0f0f0;
 	opacity: 0.3;
 	z-index: 9998;
+}
+
+
+/*add*/
+.loader img{
+	width:40px;
+	height:40px;
 }
