--- a/WebContent/system/css/main.css
+++ b/WebContent/system/css/main.css
@@ -1,12 +1,10 @@
-.login_logo{
+/*.login_logo{
 	width:100%;
 	height:100px;
 	background: #f0f0f0;
-}
-
-
+}*/
 /*导航*/
-.nav{
+/*.nav{
 	position: absolute;
 	width:200px;
 	top: 100px;
@@ -14,3 +12,34 @@
 	bottom:0px;
 	background: #f0f0f0;
 }
+.nav dl{
+	background: #f0f0f0;
+	position: relative;
+}
+.nav dt,dd{
+	width:200px;
+	height: 35px;
+	background: #f0f0f0;
+	line-height: 35px;
+	text-align: center;
+	color:#000;
+}
+.nav dt{
+	font-size: 16px;
+}
+.nav dd{
+	display: none;
+}
+.fa-angle-down{
+    position: absolute;
+	top: 5px;
+	right: 10px;
+}
+.rotate180{
+	transform:rotate(180deg);
+	transition: transform 0.5s;
+}
+.rotate0{
+	transform:rotate(0deg);
+	transition: transform 0.5s;
+}*/
