--- a/WebContent/system/css/login.css
+++ b/WebContent/system/css/login.css
@@ -1,102 +1,208 @@
-body{
-	overflow:hidden
+/*手机*/
+@media screen and (max-width: 767px) {
+	body{
+		overflow:hidden
+	}
+	.bg_img{
+		/*width:2000px;
+		height:1000px;*/
+		
+		position: absolute;
+		top:0px;
+		bottom: 0px;;
+		left: 0px;
+		right: 0px;
+		z-index: -1;
+	}
+	.bg_img img{
+		width:100%;
+		height: 100%;
+	}
+	.blur {    /*//毛玻璃效果*/
+	   -webkit-filter: blur(3px); /* Chrome, Opera */
+	   -moz-filter: blur(3px);
+	   -ms-filter: blur(3px);    
+	   filter: blur(8px);    
+	}
+	.login_logo{
+		width:100%;
+		height:100px;
+		background: #f0f0f0;
+	}
+	.login_box{
+		    /* width: 300px; */
+	    height: 380px;
+	    box-sizing: border-box;
+	    position: absolute;
+	    /* top: 50%; */
+	    /* margin-top: 50px; */
+	    /* left: 50%; */
+	    /* margin-left: -295px; */
+	    margin: 80px 20px;
+	    box-shadow: 0px 0px 6px rgb(158, 163, 166);
+	    border-radius: 5px;
+	    padding: 70px 50px 20px 50px;
+	    background: rgb(158, 163, 166,0.3);
+	}
+	.login_box_in{
+		width:100%;
+		height:70px;
+		background: #fff;
+		line-height: 70px;
+		border-radius: 5px;
+		box-sizing: border-box;
+		transition: all 0.5s;
+	}
+	.login_box_in:hover{
+		box-shadow:0px 0px 20px blue
+	}
+	.login_box_in_btn_div{
+		width:100%;
+		height:70px;
+		line-height: 70px;
+	}
+	.margin-top26{
+		margin-top: 26px;
+	}
+	.login_box_in_input{
+		width:80%;
+		height: 66px;
+		background: #fff;
+		margin-left: 30px;
+		font-size: 20px;
+	  	-webkit-box-shadow: 0 0 0 1000px white inset !important;//谷歌浏览器,记住密码变黄
+	}
+	.margin-top28{
+		margin-top: 28px;
+	}
+	.login_checkbox{
+		width:18px;
+		height: 18px;
+	    margin-top: -4px;
+	}
+	.login_checkbox+span{
+		font-size: 18px;
+		color:#ffffff;
+	}
+	.submit_btn{
+		width:150px;
+		height:56px;
+		color: #ffffff;
+		background: #000;
+		border-radius: 5px;
+		float:right;
+		font-size: 20px;
+		border:none;
+		outline: none;
+	}
+	.submit_btn:hover{
+		color:#000;
+		background: #fff;
+	}
 }
-.bg_img{
-	/*width:2000px;
-	height:1000px;*/
-	
-	position: absolute;
-	top:0px;
-	bottom: 0px;;
-	left: 0px;
-	right: 0px;
-	z-index: -1;
+/*电脑*/
+@media screen and (min-width: 768px) {
+	body{
+		overflow:hidden
+	}
+	.bg_img{
+		/*width:2000px;
+		height:1000px;*/
+		
+		position: absolute;
+		top:0px;
+		bottom: 0px;;
+		left: 0px;
+		right: 0px;
+		z-index: -1;
+	}
+	.bg_img img{
+		width:100%;
+		height: 100%;
+	}
+	.blur {    /*//毛玻璃效果*/
+	   -webkit-filter: blur(3px); /* Chrome, Opera */
+	   -moz-filter: blur(3px);
+	   -ms-filter: blur(3px);    
+	   filter: blur(8px);    
+	}
+	.login_logo{
+		width:100%;
+		height:100px;
+		background: #f0f0f0;
+	}
+	.login_box{
+		width:590px;
+		height: 380px;
+		box-sizing: border-box;
+		position: absolute;
+		top:50%;
+		margin-top:-190px;
+		left:50%;
+		margin-left:-295px;
+		box-shadow: 0px 0px 6px rgb(158, 163, 166);
+		border-radius: 5px;
+		padding:70px 50px 20px 50px;
+		background: rgb(158, 163, 166,0.3)
+	}
+	.login_box_in{
+		width:100%;
+		height:70px;
+		background: #fff;
+		line-height: 70px;
+		border-radius: 5px;
+		box-sizing: border-box;
+		transition: all 0.5s;
+	}
+	.login_box_in:hover{
+		box-shadow:0px 0px 20px blue
+	}
+	.login_box_in_btn_div{
+		width:100%;
+		height:70px;
+		line-height: 70px;
+	}
+	.margin-top26{
+		margin-top: 26px;
+	}
+	.login_box_in_input{
+		width:80%;
+		height: 66px;
+		background: #fff;
+		margin-left: 30px;
+		font-size: 20px;
+	  	-webkit-box-shadow: 0 0 0 1000px white inset !important;//谷歌浏览器,记住密码变黄
+	}
+	.margin-top28{
+		margin-top: 28px;
+	}
+	.login_checkbox{
+		width:18px;
+		height: 18px;
+		margin-left: 30px;
+	    margin-top: -4px;
+	}
+	.login_checkbox+span{
+		font-size: 18px;
+		color:#ffffff;
+	}
+	.submit_btn{
+		width:220px;
+		height:56px;
+		color: #ffffff;
+		background: #000;
+		border-radius: 5px;
+		float:right;
+		font-size: 20px;
+		border:none;
+		outline: none;
+	}
+	.submit_btn:hover{
+		color:#000;
+		background: #fff;
+	}
 }
-.bg_img img{
-	width:100%;
-	height: 100%;
-}
-.blur {    /*//毛玻璃效果*/
-   -webkit-filter: blur(3px); /* Chrome, Opera */
-   -moz-filter: blur(3px);
-   -ms-filter: blur(3px);    
-   filter: blur(8px);    
-}
-.login_logo{
-	width:100%;
-	height:100px;
-	background: #f0f0f0;
-}
-.login_box{
-	width:590px;
-	height: 380px;
-	box-sizing: border-box;
-	position: absolute;
-	top:50%;
-	margin-top:-190px;
-	left:50%;
-	margin-left:-295px;
-	box-shadow: 0px 0px 6px rgb(158, 163, 166);
-	border-radius: 5px;
-	padding:70px 50px 20px 50px;
-	background: rgb(158, 163, 166,0.3)
-}
-.login_box_in{
-	width:100%;
-	height:70px;
-	background: #fff;
-	line-height: 70px;
-	border-radius: 5px;
-	box-sizing: border-box;
-	transition: all 0.5s;
-}
-.login_box_in:hover{
-	box-shadow:0px 0px 20px blue
-}
-.login_box_in_btn_div{
-	width:100%;
-	height:70px;
-	line-height: 70px;
-}
-.margin-top26{
-	margin-top: 26px;
-}
-.login_box_in_input{
-	width:80%;
-	height: 66px;
-	background: #fff;
-	margin-left: 30px;
-	font-size: 20px;
-  	-webkit-box-shadow: 0 0 0 1000px white inset !important;//谷歌浏览器,记住密码变黄
-}
-.margin-top28{
-	margin-top: 28px;
-}
-.login_checkbox{
-	width:18px;
-	height: 18px;
-	margin-left: 30px;
-    margin-top: -4px;
-}
-.login_checkbox+span{
-	font-size: 18px;
-	color:#ffffff;
-}
-.submit_btn{
-	width:220px;
-	height:56px;
-	color: #ffffff;
-	background: #000;
-	border-radius: 5px;
-	float:right;
-	font-size: 20px;
-	border:none;
-	outline: none;
-}
-.submit_btn:hover{
-	color:#000;
-	background: #fff;
-}
+/*电脑结束*/
 /*重新图标*/
 .fa-lock:before {
     margin-top: -20px;
