--- a/WebContent/system/css/main.css
+++ b/WebContent/system/css/main.css
@@ -1,56 +1,120 @@
-@media screen and (max-width: 769px) {
+/*phone*/
+@media screen and (max-width: 767px) {
     body{
-        background-color:#666666;
+        /*background-color:#666666;*/
     }
 }
+
+/*computer*/
 @media screen and (min-width: 768px) {
     body{
-        background-color:#f0f0f0;
+       /* background-color:#f0f0f0;*/
     }
 }
 /*logo*/
 .login_logo{
 	width:100%;
 	height:100px;
-	background: #f0f0f0;
+	background: #A8A8A8;
 }
-/*导航*/
+
+
+
+/*headnav start*/
+.login_logo_img_div{
+	width:300px;
+	display: inline-block;	
+	float: left;
+}
+.headnva{
+	float:left;
+}
+.headnva li{
+	width: 150px;
+	height: 90px;
+	float:left;
+	background: #f0f0f0;
+	margin-left: 10px;
+	color:#000;
+	text-align: center;
+	padding-top:10px;
+	font-size: 16px;
+	box-sizing: border-box;
+}
+/*headnav end*/
+
+/*user button start*/
+.headlink_right_ul li{
+	width:100px;
+	height:30px;
+	margin-top:60px;
+	font-size: 14px;
+	line-height: 14px;
+}
+/*user button end*/
+
+
+/*导航开始*/
 .nav{
 	position: absolute;
 	width:200px;
-	top: 100px;
+	top: 110px;
 	left:0px;
 	bottom:0px;
 	background: #f0f0f0;
 }
+.nav a{
+	color:#000;
+}
 .nav dl{
 	background: #f0f0f0;
 	position: relative;
+	color:#000;
+	border-bottom: #000000 1px solid;
+	/*transition: background 0.6s;*/
+}
+.nav dt:hover{
+	background: #000;
+	color:#fff;
+	cursor: pointer;
 }
 .nav dt,dd{
 	width:200px;
 	height: 35px;
-	background: #f0f0f0;
 	line-height: 35px;
-	text-align: center;
-	color:#000;
+	/*text-align: center;*/
+}
+.nav dd:hover{
+	background: #fff;
+	cursor: pointer;
 }
 .nav dt{
 	font-size: 16px;
 }
 .nav dd{
 	display: none;
+	padding-left: 20px;
+}
+.bgblack{
+	background: #000;
+	color:#fff;
+}
+.bgf0f0f0{
+	background: #fff;
 }
 .fa-angle-down,.fa-angle-up{
     position: absolute;
 	top: 5px;
 	right: 10px;
 }
-.rotate180{
-	transform:rotate(180deg);
-	transition: transform 0.5s;
-}
-.rotate0{
-	transform:rotate(0deg);
-	transition: transform 0.5s;
+
+
+/*right down iframe*/
+.rightmain{
+	position: absolute;
+	top:110px;
+	left:210px;
+	background: #f0f0f0;
+	bottom:0px;
+	right: 0px;
 }
